# Manifold

./: .gitignore  MASTER_DESIGN.md  MASTER_DESIGN_v0.1_backup.md  MASTER_DESIGN_v0.2_backup.md  MASTER_DESIGN_v0.3_backup.md  MASTER_DESIGN_v0.4_backup.md  Manifold.sln  README.md
docs/decisions/: godot-get-packet-memory-contract.md
docs/plans/: 2026-04-23-phase2-networking-core.md  phase2-e2e-loopback-test.md
src/Manifold.Core/: Manifold.Core.csproj
src/Manifold.Core.Tests/: Manifold.Core.Tests.csproj
src/Manifold.Core.Tests/Contract/: CallResultAwaiterTests.cs  CallbackDispatcherTests.cs  ExceptionTests.cs  ResultTests.cs  SteamIdTests.cs  SteamLifecycleCollection.cs  SteamLifecycleTests.cs  SteamPeerRegistryTests.cs
src/Manifold.Core.Tests/Interop/: ManualPInvokeTests.cs  NativeSizeValidationTests.cs
src/Manifold.Core.Tests/Networking/: SteamNetworkingCoreTests.cs
src/Manifold.Core.Tests/Protocol/: HandshakeProtocolTests.cs  PacketHeaderTests.cs
src/Manifold.Core.Tests/StateMachine/: PeerIdMapperTests.cs  SteamNetworkingCoreTests.cs
src/Manifold.Core/Core/: DisconnectInfo.cs  Result.cs  SteamException.cs  SteamHandles.cs  SteamId.cs
src/Manifold.Core/Dispatch/: CallResultAwaiter.cs  CallbackDispatcher.cs  ISteamPeer.cs  SteamPeerRegistry.cs
src/Manifold.Core/Interop/: SteamNative.Manual.cs
src/Manifold.Godot/: Manifold.Godot.csproj
tools/ManifoldGen/: GeneratorContext.cs  ManifoldGen.csproj  PackPragmaParser.cs  Program.cs  SdkDiffer.cs  TypeMapper.cs
tools/SizeValidator/: CMakeLists.txt  size_validator.cpp
(+19 files in other folders)
